--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,8 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./web/*"]
+      "@/*": ["./web/*"],
+      "~/*": ["./web/*"]
     }
   },
   "exclude": ["node_modules", "tmp"]
